--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "author": "Roni Ragil Iman Khoirul",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^8.11.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "pg": "^8.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
     "babel-jest": "^29.7.0",
+    "firebase-admin": "^12.1.1",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "typescript": "^5.4.5"
