--- a/package.json
+++ b/package.json
@@ -2,25 +2,24 @@
   "name": "student-helpcare-um",
   "version": "1.0.0",
   "description": "API for student helpcare UM app",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "scripts": {
-    "test": "jest --runInBand",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node src/index.ts",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "jest": {
-    "transform": {
-      "^.+\\.[t|j]sx?$": "babel-jest"
-    },
-    "collectCoverage": true
-  },
-  "keywords": [],
-  "author": "Roni Ragil Iman Khoirul",
-  "license": "ISC",
   "dependencies": {
     "@types/pg": "^8.11.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase-admin": "^12.1.1",
     "pg": "^8.12.0",
     "zod": "^3.23.8"
   },
@@ -32,8 +31,9 @@
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
     "babel-jest": "^29.7.0",
-    "firebase-admin": "^12.1.1",
     "jest": "^29.7.0",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.7",
     "supertest": "^7.0.0",
     "typescript": "^5.4.5"
   }
